--- a/pages/index/scss/index.scss
+++ b/pages/index/scss/index.scss
@@ -133,10 +133,10 @@
     // background-position-y: -100px;
   }
 
-  .swiper-slide__upper,
-  .swiper-slide__lower {
-    height: 35vh;
-  }
+  // .swiper-slide__upper,
+  // .swiper-slide__lower {
+  //   // height: 35vh;
+  // }
 
   .swiper-slide__upper {
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
